--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,29 +93,77 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp">
+            android:layout_height="90dp">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
                 android:orientation="vertical" >
-
-                <TextView
-                    android:id="@+id/mark_name"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="markname"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/mark_latlng"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/sample_name"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="18sp"/>
+                    <TextView
+                        android:id="@+id/mark_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/space_4"
+                        android:text="markname"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="18sp" />
+                </LinearLayout>
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="5dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/sample_latlng"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="18sp"/>
+                    <TextView
+                        android:id="@+id/mark_latlng"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/space_4"
+
+                        android:text="mark latlng"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="18sp" />
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/rl_mark_cost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
                     android:layout_marginTop="5dp"
-                    android:text="33.2310   119.3652"
-                    android:textColor="@color/colorPrimary" />
+                    android:visibility="gone">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/sample_cost"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="18sp"/>
+                    <TextView
+                        android:id="@+id/mark_cost"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/space_4"
+
+                        android:text="mark cost"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="18sp"/>
+                </LinearLayout>
+
             </LinearLayout>
             <LinearLayout
                 android:id="@+id/mark_detail_layout"
@@ -132,7 +180,7 @@
                     android:text="详情"
                     android:drawableRight="@drawable/detail"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="16sp" />
+                    android:textSize="18sp" />
             </LinearLayout>
 
         </RelativeLayout>
