--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,7 +93,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="90dp">
+            android:layout_height="100dp">
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -166,19 +166,29 @@
 
             </LinearLayout>
             <LinearLayout
-                android:id="@+id/mark_detail_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
+                android:gravity="center_vertical"
                 android:clickable="true"
-                android:orientation="horizontal">
+                android:orientation="vertical">
                 <TextView
+                    android:id="@+id/mark_detail_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="详情"
-                    android:drawableRight="@drawable/detail"
+                    android:drawableRight="@drawable/icon_detail"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/mark_navi_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:text="导航"
+                    android:drawableRight="@drawable/icon_navi"
                     android:textColor="@color/colorPrimary"
                     android:textSize="18sp" />
             </LinearLayout>
