--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="space_10">10.0dip</dimen>
     <dimen name="space_13">13.0dip</dimen>
     <dimen name="space_20">20.0dip</dimen>
+    <dimen name="space_30">30.0dip</dimen>
 </resources>
