--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.main.MainActivity"
+    android:id="@+id/id_drawer_layout"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:fitsSystemWindows="true">
+
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -78,7 +84,6 @@
             </LinearLayout>
 
         </RelativeLayout>
-        <include layout="@layout/bottom"/>
 
     </LinearLayout>
     <LinearLayout
@@ -87,117 +92,136 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@color/white"
-
         android:orientation="vertical"
         android:visibility="gone">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp">
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:orientation="vertical" >
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:orientation="vertical" >
-                <LinearLayout
+                android:layout_marginTop="@dimen/space_8"
+                android:orientation="horizontal">
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/sample_name"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="18sp"/>
-                    <TextView
-                        android:id="@+id/mark_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/space_4"
-                        android:text="markname"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="18sp" />
-                </LinearLayout>
-                <LinearLayout
+                    android:text="@string/sample_name"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp"/>
+                <TextView
+                    android:id="@+id/mark_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="5dp">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/sample_latlng"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="18sp"/>
-                    <TextView
-                        android:id="@+id/mark_latlng"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/space_4"
-
-                        android:text="mark latlng"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="18sp" />
-                </LinearLayout>
-                <LinearLayout
-                    android:id="@+id/rl_mark_cost"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="5dp"
-                    android:visibility="gone">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/sample_cost"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="18sp"/>
-                    <TextView
-                        android:id="@+id/mark_cost"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/space_4"
-
-                        android:text="mark cost"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="18sp"/>
-                </LinearLayout>
-
+                    android:layout_marginLeft="@dimen/space_4"
+                    android:text="markname"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp" />
             </LinearLayout>
+
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
-                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/space_8">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sample_latlng"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp"/>
+                <TextView
+                    android:id="@+id/mark_latlng"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/space_4"
+
+                    android:text="mark latlng"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/rl_mark_cost"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/space_8"
+                android:visibility="gone">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sample_cost"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp"/>
+                <TextView
+                    android:id="@+id/mark_cost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/space_4"
+
+                    android:text="mark cost"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/space_8"
+                android:layout_marginBottom="@dimen/space_8"
                 android:clickable="true"
-                android:orientation="vertical">
+                android:orientation="horizontal">
                 <TextView
-                    android:id="@+id/mark_detail_layout"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv_mark_calc_altersample"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/calc_alterSample"
+                    android:drawableLeft="@drawable/icon_altersample"
+                    android:drawablePadding="@dimen/space_4"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/tv_mark_detail"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="详情"
-                    android:drawableRight="@drawable/icon_detail"
+                    android:drawableLeft="@drawable/icon_detail"
                     android:drawablePadding="@dimen/space_4"
                     android:textColor="@color/colorPrimary"
                     android:textSize="18sp" />
                 <TextView
-                    android:id="@+id/mark_navi_layout"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv_mark_navi"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="25dp"
+                    android:layout_weight="1"
                     android:text="导航"
-                    android:drawableRight="@drawable/icon_navi"
+                    android:drawableLeft="@drawable/icon_navi"
                     android:drawablePadding="@dimen/space_4"
                     android:textColor="@color/colorPrimary"
                     android:textSize="18sp" />
             </LinearLayout>
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
 </RelativeLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/id_navi_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/header_drawer"
+        app:menu="@menu/menu_drawer"/>
+
+</android.support.v4.widget.DrawerLayout>
 
