--- a/app/src/main/res/menu/menu_alternative_params.xml
+++ b/app/src/main/res/menu/menu_alternative_params.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/action_ok"
         android:title="@string/button_ok"
-        android:icon="@drawable/ic_ok"
+        android:icon="@drawable/icon_done"
         app:showAsAction="always"/>
 </menu>
