--- a/app/src/main/res/menu/menu_environ_variable.xml
+++ b/app/src/main/res/menu/menu_environ_variable.xml
@@ -11,7 +11,7 @@
         android:id="@+id/action_save"
         android:orderInCategory="90"
         android:title="保存"
-        android:icon="@drawable/ic_save_white_24dp"
+        android:icon="@drawable/icon_done"
         app:showAsAction="always"/>
 
 </menu>
