--- a/app/src/main/res/layout/alternative_params.xml
+++ b/app/src/main/res/layout/alternative_params.xml
@@ -75,7 +75,7 @@
     <include layout="@layout/view_divide_line" />
     <LinearLayout
         android:padding="@dimen/space_8"
-
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
@@ -83,7 +83,7 @@
             android:layout_width="0.0dip"
             android:layout_height="wrap_content"
             android:text="@string/uncertain_threshold"
-            android:layout_weight="3.0" />
+            android:layout_weight="3.0"/>
         <EditText
             android:textSize="@dimen/text_size_16"
             android:id="@+id/edit_simi_threshold"
@@ -95,7 +95,6 @@
             android:layout_marginLeft="5.0dip"
             android:layout_weight="7.0"/>
     </LinearLayout>
-    <include layout="@layout/view_divide_line" />
     <LinearLayout
         android:padding="@dimen/space_8"
         android:baselineAligned="false"
@@ -142,21 +141,5 @@
             android:layout_weight="7.0"/>
     </LinearLayout>
     <include layout="@layout/view_divide_line" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space_8"
-        android:layout_marginLeft="@dimen/space_8"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size_16"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
-            android:text="第三步：点击右上角的按钮，快去计算可替代样点吧"/>
-
-    </LinearLayout>
 
 </LinearLayout>
