--- a/app/src/main/res/layout/activity_app_help.xml
+++ b/app/src/main/res/layout/activity_app_help.xml
@@ -16,10 +16,16 @@
             app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </android.support.design.widget.AppBarLayout>
-
-    <WebView
-        android:id="@+id/web_view"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tablayout_help"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        app:tabMode="fixed"/>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager_help"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
 </LinearLayout>
